@@ -3,10 +3,13 @@ package com.application.poppool.domain.user.service;
 import com.application.poppool.domain.token.service.BlackListTokenService;
 import com.application.poppool.domain.token.service.RefreshTokenService;
 import com.application.poppool.domain.user.dto.response.GetMyPageResponse;
+import com.application.poppool.domain.user.dto.response.GetWithDrawlSurveyResponse;
 import com.application.poppool.domain.user.entity.UserEntity;
+import com.application.poppool.domain.user.entity.WithDrawalSurveyEntity;
 import com.application.poppool.domain.user.repository.UserRepository;
-import com.application.poppool.global.exception.BadRequestException;
+import com.application.poppool.domain.user.repository.WithDrawlRepository;
 import com.application.poppool.global.exception.ErrorCode;
+import com.application.poppool.global.exception.NotFoundException;
 import com.application.poppool.global.jwt.JwtService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -14,20 +17,19 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class UserService {
 
     private final UserRepository userRepository;
+    private final WithDrawlRepository withDrawlSurveyRepository;
     private final BlackListTokenService blackListTokenService;
     private final RefreshTokenService refreshTokenService;
     private final JwtService jwtService;
 
     /**
      * 마이페이지 조회
-     *
      * @param userId
      * @return
      */
@@ -35,7 +37,7 @@ public class UserService {
     public GetMyPageResponse getMyPage(String userId) {
 
         UserEntity user = userRepository.findByUserId(userId)
-                .orElseThrow(() -> new BadRequestException(ErrorCode.NOT_EXISTS_USER));
+                .orElseThrow(() -> new NotFoundException(ErrorCode.NOT_EXISTS_USER));
 
 
         List<GetMyPageResponse.PopUpInfo> popUpInfoList = user.getComments().stream()
@@ -44,14 +46,43 @@ public class UserService {
                         .popUpStoreId(popUpStore.getId())
                         .popUpStoreName(popUpStore.getName())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
 
         return GetMyPageResponse.builder()
                 .nickName(user.getNickName())
                 .instagramId(user.getInstagramId())
                 .popUpInfoList(popUpInfoList)
                 .build();
+    }
 
+    /**
+     * 회원 탈퇴
+     * @param userId
+     */
+    @Transactional
+    public void deleteUser(String userId) {
+        UserEntity user = userRepository.findByUserId(userId)
+                .orElseThrow(() -> new NotFoundException(ErrorCode.NOT_EXISTS_USER));
+
+        // 회원 삭제
+        userRepository.delete(user);
+    }
+
+    /**
+     * 회원 탈퇴 설문 항목 조회
+     */
+    @Transactional(readOnly = true)
+    public GetWithDrawlSurveyResponse getWithDrawlSurvey() {
+        List<WithDrawalSurveyEntity> surveyEntityList = withDrawlSurveyRepository.findAll();
+
+        List<GetWithDrawlSurveyResponse.Survey> withDrawlSurveyList = surveyEntityList.stream()
+                .map(surveyEntity -> GetWithDrawlSurveyResponse.Survey.builder()
+                        .id(surveyEntity.getId())
+                        .question(surveyEntity.getQuestion())
+                        .build())
+                .toList();
+
+        return GetWithDrawlSurveyResponse.builder().withDrawlSurveyList(withDrawlSurveyList).build();
     }
 
     /**
@@ -69,6 +100,5 @@ public class UserService {
         refreshTokenService.deleteRefreshToken(jwtService.getUserId(accessToken));
 
     }
-
 
 }
